--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -3,6 +3,8 @@ name: SonarQube Scan
 on:
   push:
     branches: [ main ]
+  pull_request:
+    branches: [ main ]
 
 jobs:
   sonarQubeScan:
@@ -12,9 +14,10 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
 
-      - name: Set up Java (for scanner)
+      - name: Set up Java
         uses: actions/setup-java@v3
         with:
+          distribution: 'temurin'  # Required!
           java-version: '17'
 
       - name: SonarQube Scan
@@ -22,8 +25,8 @@ jobs:
         with:
           args: >
             -Dsonar.projectKey=myproject
-            -Dsonar.projectName=MyProject
+            -Dsonar.projectName=My Project
             -Dsonar.sources=.
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-          SONAR_HOST_URL: "http://localhost:9000"
+          SONAR_HOST_URL: "http://localhost:9000"  # 🔁 Change to your actual SonarQube URL
