--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Set up Java
         uses: actions/setup-java@v3
         with:
-          distribution: 'temurin'  # Required!
+          distribution: 'temurin'
           java-version: '17'
 
       - name: SonarQube Scan
@@ -29,4 +29,4 @@ jobs:
             -Dsonar.sources=.
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-          SONAR_HOST_URL: "http://localhost:9000"  # 🔁 Change to your actual SonarQube URL
+          SONAR_HOST_URL: "http://localhost:9000"
